fix handling of non-existing posts, add loading of newer posts, fix sometimes flickering background color

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -11,7 +11,7 @@ html {
 }
 
 html, body {
-  background-color: #272727;
+  background-color: #f0efef;
   font-family: 'Titillium Web', 'Helvetica', 'Arial', sans-serif;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
